--- a/Desctoper/Desctoper.vcxproj.filters
+++ b/Desctoper/Desctoper.vcxproj.filters
@@ -24,4 +24,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Sources\Images\TStrannik.jpg">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
+    <Image Include="Sources\Images\TStrannik.png">
+      <Filter>Файлы ресурсов</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
